tests/snapshots/snapshots__budget_structs_4000.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 4000 (4023 tokens)

README.md
     1→# Archived project. No maintenance. 
     3→This project is not maintained anymore and is archived. Feel free to fork and
     4→make your own changes if needed. For more detail read my blog post: [Taking an indefinite sabbatical from my projects](https://arslan.io/2018/10/09/taking-an-indefinite-sabbatical-from-my-projects/)
     5→
     6→Thanks to everyone for their valuable feedback and contributions.
     7→
     8→# Structs
    10→Structs contains various utilities to work with Go (Golang) structs. It was
    11→initially used by me to convert a struct into a `map[string]interface{}`. With
    12→time I've added other utilities for structs.  It's basically a high level
    13→package based on primitives from the reflect package. Feel free to add new
    14→functions or improve the existing code.
    15→
    16→## Install
    18→```bash
    19→go get github.com/fatih/structs
    20→```
    21→
    22→## Usage and Examples
    24→Just like the standard lib `strings`, `bytes` and co packages, `structs` has
    25→many global functions to manipulate or organize your struct data. Lets define
    26→and declare a struct:
    27→
    28→```go
    29→type Server struct {
    30→	Name        string `json:"name,omitempty"`
    31→	ID          int
    32→	Enabled     bool
    33→	users       []string // not exported
    34→	http.Server          // embedded
    35→}
    36→
    37→server := &Server{
    38→	Name:    "gopher",
    39→	ID:      123456,
    40→	Enabled: true,
    41→}
    42→```
    43→
    44→```go
      →…
    74→### Struct methods
    76→The structs functions can be also used as independent methods by creating a new
    77→`*structs.Struct`. This is handy if you want to have more control over the
    78→structs (such as retrieving a single Field).
    79→
    80→```go
    81→// Create a new struct type:
    82→s := structs.New(server)
      →…
    95→### Field methods
    97→We can easily examine a single Field for more detail. Below you can see how we
    98→get and interact with various field methods:
    99→
   100→
   101→```go
   102→s := structs.New(server)
   103→
      →…
   163→## Credits
   165→ * [Fatih Arslan](https://github.com/fatih)
   166→ * [Cihangir Savas](https://github.com/cihangir)
   167→
   168→## License
   170→The MIT License (MIT) - see LICENSE.md for more details

field.go
     3→import (
     4→	"errors"
     5→	"fmt"
     6→	"reflect"
     7→)
     9→var (
    10→	errNotExported = errors.New("field is not exported")
    11→	errNotSettable = errors.New("field is not settable")
    14→// Field represents a single struct field that encapsulates high level
    15→// functions around the field.
    16→type Field struct {
    17→	value      reflect.Value
    18→	field      reflect.StructField
    19→	defaultTag string
    20→}
    22→// Tag returns the value associated with key in the tag string. If there is no
    23→// such key in the tag, Tag returns the empty string.
    24→func (f *Field) Tag(key string) string {
    25→	return f.field.Tag.Get(key)
    26→}
    28→// Value returns the underlying value of the field. It panics if the field
    29→// is not exported.
    30→func (f *Field) Value() interface{} {
    31→	return f.value.Interface()
    32→}
    34→// IsEmbedded returns true if the given field is an anonymous field (embedded)
    35→func (f *Field) IsEmbedded() bool {
    36→	return f.field.Anonymous
    37→}
    39→// IsExported returns true if the given field is exported.
    40→func (f *Field) IsExported() bool {
    41→	return f.field.PkgPath == ""
    42→}
    44→// IsZero returns true if the given field is not initialized (has a zero value).
    45→// It panics if the field is not exported.
    46→func (f *Field) IsZero() bool {
    47→	zero := reflect.Zero(f.value.Type()).Interface()
    48→	current := f.Value()
      →	…
    53→// Name returns the name of the given field
    54→func (f *Field) Name() string {
    55→	return f.field.Name
    56→}
    58→// Kind returns the fields kind, such as "string", "map", "bool", etc ..
    59→func (f *Field) Kind() reflect.Kind {
    60→	return f.value.Kind()
    61→}
    63→// Set sets the field to given value v. It returns an error if the field is not
    64→// settable (not addressable or not exported) or if the given value's type
    65→// doesn't match the fields type.
    66→func (f *Field) Set(val interface{}) error {
    67→	// we can't set unexported fields, so be sure this field is exported
    68→	if !f.IsExported() {
      →	…
    87→// Zero sets the field to its zero value. It returns an error if the field is not
    88→// settable (not addressable or not exported).
    89→func (f *Field) Zero() error {
    90→	zero := reflect.Zero(f.value.Type()).Interface()
    91→	return f.Set(zero)
      →	…
    94→// Fields returns a slice of Fields. This is particular handy to get the fields
    95→// of a nested struct . A struct tag with the content of "-" ignores the
    96→// checking of that particular field. Example:
    97→//
    98→//   // Field is ignored by this package.
    99→//   Field *http.Request `structs:"-"`
   100→//
   101→// It panics if field is not exported or if field's kind is not struct
   102→func (f *Field) Fields() []*Field {
   103→	return getFields(f.value, f.defaultTag)
   104→}
   106→// Field returns the field from a nested struct. It panics if the nested struct
   107→// is not exported or if the field was not found.
   108→func (f *Field) Field(name string) *Field {
   109→	field, ok := f.FieldOk(name)
   110→	if !ok {
      →	…
   117→// FieldOk returns the field from a nested struct. The boolean returns whether
   118→// the field was found (true) or not (false).
   119→func (f *Field) FieldOk(name string) (*Field, bool) {
   120→	value := &f.value
   121→	// value must be settable so we need to make sure it holds the address of the
      →	…

field_test.go
     3→import …
     8→// A test struct that defines all cases
     9→type Foo struct {
    10→	A    string
    11→	B    int    `structs:"y"`
    12→	C    bool   `json:"c"`
    13→	d    string // not exported
    14→	E    *Baz
    15→	x    string `xml:"x"` // not exported, with tag
    16→	Y    []string
    17→	Z    map[string]interface{}
    18→	*Bar // embedded
    19→}
    21→type Baz struct {
    22→	A string
    23→	B int
    24→}
    26→type Bar struct {
    27→	E string
    28→	F int
    29→	g []string
    30→}
    32→func newStruct() *Struct {
    53→func TestField_Set(t *testing.T) {
   136→func TestField_NotSettable(t *testing.T) {
   150→func TestField_Zero(t *testing.T) {
   209→func TestField(t *testing.T) {
   222→func TestField_Kind(t *testing.T) {
   242→func TestField_Tag(t *testing.T) {
   271→func TestField_Value(t *testing.T) {
   295→func TestField_IsEmbedded(t *testing.T) {
   307→func TestField_IsExported(t *testing.T) {
   323→func TestField_IsZero(t *testing.T) {
   335→func TestField_Name(t *testing.T) {
   343→func TestField_Field(t *testing.T) {
   367→func TestField_Fields(t *testing.T) {
   376→func TestField_FieldOk(t *testing.T) {

structs.go
     4→import (
     5→	"fmt"
     6→
     7→	"reflect"
     8→)
    10→var (
    11→	// DefaultTagName is the default tag name for struct fields which provides
    12→	// a more granular to tweak certain structs. Lookup the necessary functions
    13→	// for more info.
    14→	DefaultTagName = "structs" // struct's field default tag name
    17→// Struct encapsulates a struct type to provide several high level functions
    18→// around the struct.
    19→type Struct struct {
    20→	raw     interface{}
    21→	value   reflect.Value
    22→	TagName string
    23→}
    27→func New(s interface{}) *Struct {
    81→func (s *Struct) Map() map[string]interface{} {
    89→func (s *Struct) FillMap(out map[string]interface{}) {
   174→func (s *Struct) Values() []interface{} {
   222→func (s *Struct) Fields() []*Field {
   233→func (s *Struct) Names() []string {
   245→func getFields(v reflect.Value, tagName string) []*Field {
   275→func (s *Struct) Field(name string) *Field {
   287→func (s *Struct) FieldOk(name string) (*Field, bool) {
   318→func (s *Struct) IsZero() bool {
   365→func (s *Struct) HasZero() bool {
   398→func (s *Struct) Name() string {
   405→func (s *Struct) structFields() []reflect.StructField {
   428→func strctVal(s interface{}) reflect.Value {
   445→func Map(s interface{}) map[string]interface{} {
   451→func FillMap(s interface{}, out map[string]interface{}) {
   457→func Values(s interface{}) []interface{} {
   463→func Fields(s interface{}) []*Field {
   469→func Names(s interface{}) []string {
   475→func IsZero(s interface{}) bool {
   481→func HasZero(s interface{}) bool {
   487→func IsStruct(s interface{}) bool {
   503→func Name(s interface{}) string {
   509→func (s *Struct) nested(val reflect.Value) interface{} {

structs_example_test.go
     3→import …
     8→func ExampleNew() {
    33→func ExampleMap() {
    58→func ExampleMap_tags() {
    84→func ExampleMap_omitNested() {
   114→func ExampleMap_omitEmpty() {
   136→func ExampleValues() {
   156→func ExampleValues_omitEmpty() {
   178→func ExampleValues_tags() {
   207→func ExampleFields() {
   232→func ExampleFields_nested() {
   263→func ExampleField() {
   297→func ExampleIsZero() {
   322→func ExampleHasZero() {

structs_test.go
     3→import …
    10→func TestMapNonStruct(t *testing.T) {
    24→func TestStructIndexes(t *testing.T) {
    46→func TestMap(t *testing.T) {
    86→func TestMap_Tag(t *testing.T) {
   116→func TestMap_CustomTag(t *testing.T) {
   167→func TestMap_MultipleCustomTag(t *testing.T) {
   192→func TestMap_OmitEmpty(t *testing.T) {
   213→func TestMap_OmitNested(t *testing.T) {
   244→func TestMap_Nested(t *testing.T) {
   271→func TestMap_NestedMapWithStructValues(t *testing.T) {
   305→func TestMap_NestedMapWithStringValues(t *testing.T) {
   338→func TestMap_NestedMapWithInterfaceValues(t *testing.T) {
   372→func TestMap_NestedMapWithSliceIntValues(t *testing.T) {
   406→func TestMap_NestedMapWithSliceStructValues(t *testing.T) {
   453→func TestMap_NestedSliceWithStructValues(t *testing.T) {
   482→func TestMap_NestedSliceWithPointerOfStructValues(t *testing.T) {
   511→func TestMap_NestedSliceWithIntValues(t *testing.T) {
   533→func TestMap_Anonymous(t *testing.T) {
   561→func TestMap_Flatnested(t *testing.T) {
   588→func TestMap_FlatnestedOverwrite(t *testing.T) {
   615→func TestMap_TimeField(t *testing.T) {
   629→func TestFillMap(t *testing.T) {
   665→func TestFillMap_Nil(t *testing.T) {
   686→func TestStruct(t *testing.T) {
   699→func TestValues(t *testing.T) {
   732→func TestValues_OmitEmpty(t *testing.T) {
   750→func TestValues_OmitNested(t *testing.T) {
   789→func TestValues_Nested(t *testing.T) {
   819→func TestValues_Anonymous(t *testing.T) {
   850→func TestNames(t *testing.T) {
   883→func TestFields(t *testing.T) {
   916→func TestFields_OmitNested(t *testing.T) {
   953→func TestFields_Anonymous(t *testing.T) {
   984→func TestIsZero(t *testing.T) {
  1023→func TestIsZero_OmitNested(t *testing.T) {
  1051→func TestIsZero_Nested(t *testing.T) {
  1079→func TestIsZero_Anonymous(t *testing.T) {
  1108→func TestHasZero(t *testing.T) {
  1150→func TestHasZero_OmitNested(t *testing.T) {
  1171→func TestHasZero_Nested(t *testing.T) {
  1190→func TestHasZero_Anonymous(t *testing.T) {
  1210→func TestName(t *testing.T) {
  1238→func TestNestedNilPointer(t *testing.T) {
  1287→func TestSetValueOnNestedField(t *testing.T) {
  1309→type Person struct {
  1310→	Name string
  1311→	Age  int
  1312→}
  1314→func (p *Person) String() string {
  1318→func TestTagWithStringOption(t *testing.T) {
  1358→type Animal struct {
  1359→	Name string
  1360→	Age  int
  1361→}
  1363→type Dog struct {
  1364→	Animal *Animal `json:"animal,string"`
  1365→}
  1367→func TestNonStringerTagWithStringOption(t *testing.T) {
  1395→func TestMap_InterfaceValue(t *testing.T) {
  1409→func TestPointer2Pointer(t *testing.T) {
  1430→func TestMap_InterfaceTypeWithMapValue(t *testing.T) {

tags.go
     3→import "strings"
     5→// tagOptions contains a slice of tag options
     6→type tagOptions []string
     8→// Has returns true if the given option is available in tagOptions
     9→func (t tagOptions) Has(opt string) bool {
    10→	for _, tagOpt := range t {
    11→		if tagOpt == opt {
    12→			return true
    13→		}
    14→	}
    15→
    16→	return false
    17→}
    19→// parseTag splits a struct field's tag into its name and a list of options
      →…
    22→func parseTag(tag string) (string, tagOptions) {

tags_test.go
     3→import "testing"
     5→func TestParseTag_Name(t *testing.T) {
    26→func TestParseTag_Opts(t *testing.T) {
