tests/snapshots/snapshots__budget_structs_500.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 500 (488 words)

README.md
     1→# Archived project. No maintenance. 
     3→This project is not maintained anymore and is archived. Feel free to fork and
      →…
     8→# Structs
    10→Structs contains various utilities to work with Go (Golang) structs. It was
      →…
    16→## Install
    18→```bash
      →…
    22→## Usage and Examples
    24→Just like the standard lib `strings`, `bytes` and co packages, `structs` has
      →…
    74→### Struct methods
    76→The structs functions can be also used as independent methods by creating a new
      →…
    95→### Field methods
    97→We can easily examine a single Field for more detail. Below you can see how we
      →…
   163→## Credits
   165→ * [Fatih Arslan](https://github.com/fatih)
      →…
   168→## License
   170→The MIT License (MIT) - see LICENSE.md for more details
field.go
     9→var (
    10→	errNotExported = errors.New("field is not exported")
    11→	errNotSettable = errors.New("field is not settable")
    14→// Field represents a single struct field that encapsulates high level
    15→// functions around the field.
    16→type Field struct {
    17→	value      reflect.Value
    18→	field      reflect.StructField
    19→	defaultTag string
    20→}
    24→func (f *Field) Tag(key string) string {
    30→func (f *Field) Value() interface{} {
    35→func (f *Field) IsEmbedded() bool {
    40→func (f *Field) IsExported() bool {
    46→func (f *Field) IsZero() bool {
    54→func (f *Field) Name() string {
    59→func (f *Field) Kind() reflect.Kind {
    66→func (f *Field) Set(val interface{}) error {
    89→func (f *Field) Zero() error {
   102→func (f *Field) Fields() []*Field {
   108→func (f *Field) Field(name string) *Field {
   119→func (f *Field) FieldOk(name string) (*Field, bool) {
structs.go
    10→var (
    11→	// DefaultTagName is the default tag name for struct fields which provides
    12→	// a more granular to tweak certain structs. Lookup the necessary functions
    13→	// for more info.
    14→	DefaultTagName = "structs" // struct's field default tag name
    17→// Struct encapsulates a struct type to provide several high level functions
    18→// around the struct.
    19→type Struct struct {
    20→	raw     interface{}
    21→	value   reflect.Value
    22→	TagName string
    23→}
    27→func New(s interface{}) *Struct {
    81→func (s *Struct) Map() map[string]interface{} {
    89→func (s *Struct) FillMap(out map[string]interface{}) {
   174→func (s *Struct) Values() []interface{} {
   222→func (s *Struct) Fields() []*Field {
   233→func (s *Struct) Names() []string {
   245→func getFields(v reflect.Value, tagName string) []*Field {
   246→	if v.Kind() == reflect.Ptr {
      →…
   275→func (s *Struct) Field(name string) *Field {
   287→func (s *Struct) FieldOk(name string) (*Field, bool) {
   318→func (s *Struct) IsZero() bool {
   365→func (s *Struct) HasZero() bool {
   398→func (s *Struct) Name() string {
   405→func (s *Struct) structFields() []reflect.StructField {
   428→func strctVal(s interface{}) reflect.Value {
   429→	v := reflect.ValueOf(s)
      →…
   445→func Map(s interface{}) map[string]interface{} {
   451→func FillMap(s interface{}, out map[string]interface{}) {
   457→func Values(s interface{}) []interface{} {
   463→func Fields(s interface{}) []*Field {
   469→func Names(s interface{}) []string {
   475→func IsZero(s interface{}) bool {
   481→func HasZero(s interface{}) bool {
   487→func IsStruct(s interface{}) bool {
   503→func Name(s interface{}) string {
   509→func (s *Struct) nested(val reflect.Value) interface{} {
tags.go
     5→// tagOptions contains a slice of tag options
     6→type tagOptions []string
     9→func (t tagOptions) Has(opt string) bool {
    22→func parseTag(tag string) (string, tagOptions) {
