tests/snapshots/snapshots__budget_structs_level0.snap
---
source: tests/snapshots.rs
expression: output
---
budget: 3 → level 0 (4 words)

README.md
field.go
structs.go
tags.go
